# OTUS_Cpp_Professional

./: README.MD  test_version.cpp
.github/workflows/: hw1.yml
01_homework/: CMakeLists.txt  lib.cpp  main.cpp  test_version.cpp  version.h.in
